nginx/nginx-unprivileged/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: web
  selector:
    app: nginx
